# gMF

./: CMakeLists.txt  Kernel.cpp  README.md  batch.cpp  common.cpp  demo.cpp  demo_backup.cpp  demo_binary.cpp  demo_bseg.cpp  demo_gslic.cpp  fyuse_batch_seg.cpp  image_helper.h  permutohedral.cpp  tool_video2frames.cpp
data/: batch_binary.sh  batch_binary.sh~  msk.ppm
gMF_Lib/: gMF.h  gMF_define.h
gMF_Lib/engines/: gMF_bf_grid_engine.cu  gMF_bf_grid_engine.h  gMF_bf_grid_engine_kernel.h  gMF_fileter_engine.cu  gMF_fileter_engine.h  gMF_fileter_engine_shared.h  gMF_filter_engine_kernel.h  gMF_inference_engine.cu  gMF_inference_engine.h  gMF_inference_engine_kernel.h
gMF_Lib/objects/: gMF_BF_info.h  gMF_GF_info.h  gMF_bf_grid.h
gSLIC_Lib/: gSLIC_defines.h
gSLIC_Lib/engines/: gSLIC_core_engine.cpp  gSLIC_core_engine.h  gSLIC_seg_engine.cpp  gSLIC_seg_engine.h  gSLIC_seg_engine_GPU.cu  gSLIC_seg_engine_GPU.h  gSLIC_seg_engine_shared.h
gSLIC_Lib/objects/: gSLIC_spixel_info.h
include/: Kernel.h  common.h  permutohedral.h
include/Eigen/: Core
include/Eigen/src/Cholesky/: LDLT.h
include/Eigen/src/Core/: ArrayWrapper.h  CommaInitializer.h  CwiseUnaryView.h  DenseStorage.h  DiagonalMatrix.h  Functors.h  MatrixBase.h  PermutationMatrix.h  PlainObjectBase.h  StableNorm.h  Transpose.h  TriangularMatrix.h
include/Eigen/src/Core/arch/SSE/: MathFunctions.h
include/Eigen/src/Core/products/: GeneralBlockPanelKernel.h  GeneralMatrixVector.h  TriangularMatrixMatrix_MKL.h  TriangularMatrixVector_MKL.h
include/Eigen/src/Core/util/: Macros.h  Memory.h  XprHelper.h
include/Eigen/src/Eigenvalues/: ComplexSchur.h  ComplexSchur_MKL.h  RealSchur.h  SelfAdjointEigenSolver.h  SelfAdjointEigenSolver_MKL.h
include/Eigen/src/Geometry/: AlignedBox.h  Quaternion.h
include/Eigen/src/LU/: FullPivLU.h
include/Eigen/src/PardisoSupport/: PardisoSupport.h
include/Eigen/src/QR/: ColPivHouseholderQR.h  ColPivHouseholderQR_MKL.h
include/Eigen/src/SparseCore/: SparseDiagonalProduct.h  SparseMatrix.h  SparseSelfAdjointView.h  SparseUtil.h  SparseVector.h
include/Eigen/src/SuperLUSupport/: SuperLUSupport.h
include/Eigen/src/plugins/: ArrayCwiseBinaryOps.h
